--- a/index.html
+++ b/index.html
@@ -3,16 +3,16 @@
 <html>
 	<head>
 		<meta charset="utf-8"/>
-		<title> felix's game </title>
+		<title> AJ Tycoon </title>
 		<script src="allegro.js"></script>
 		<script src="game.js"></script>
 		<link href='https://fonts.googleapis.com/css?family=Roboto:100' rel='stylesheet' type='text/css'>
 		<link rel="stylesheet" type="text/css" href="tutorial.css">
 	</head>
 	<body>
-		<h1> felix's game </h1>
+		<h1> Apple Juice Tycoon </h1>
 		<canvas id="game_canvas" width="640" height="480"></canvas>
-		<div id="debug"></div>
+		<!--<div id="debug"></div> -->
 		<div id="footer"><b>allegro.js by <a href="http://sos.gd/">Sos Sosowski</a><b></div>
 	</body>
 </html>
